# dreal-cmake-example-project

./: .travis.yml  CMakeLists.txt  README.md  check_sat.cc
.github/workflows/: main.yml
cmake/modules/: FindDreal.cmake
